refac:sidebar responsiveness, z-index fixed, overlapping of bar and sidebar icon fixed, some other UI related bugs fixed

--- a/src/Components/RateUs.css
+++ b/src/Components/RateUs.css
@@ -137,6 +137,7 @@
 .header {
   width: 90vw;
   margin: auto;
+  z-index: 100;
 }
 
 .rateUsContainer {
