--- a/src/Components/TopContainer.css
+++ b/src/Components/TopContainer.css
@@ -113,13 +113,18 @@
   flex-shrink: 0; /* Prevent items from shrinking */
 }
 
-.mobview {
+/*.mobview {*/
+/*  display: none;*/
+/*}*/
+
+.bars{
   display: none;
 }
 
 @media screen and (max-width: 1500px) {
   .mobview {
     display: flex;
+    margin-left: 80%;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
@@ -130,6 +135,7 @@
   }
 
   .bars {
+    display: block;
     padding: 20px;
     cursor: pointer;
   }
@@ -140,7 +146,7 @@
 
   .mobview #shortview {
     position: absolute;
-    left: 10px;
+    right: 100%;
     top: 60px;
     background: rgba(0, 0, 0, 0.8);
     border-radius: 10px;
@@ -160,12 +166,14 @@
     top: -5px;
     right: 20px;
     transform: rotate(45deg);
+    z-index: 100000;
   }
 
   #shortview.show {
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: 100000;
   }
 
   .mobview #shortview ul {
@@ -173,6 +181,7 @@
     height: 100%;
     margin: 0;
     padding: 0;
+    z-index: 100000;
   }
 
   .mobview #shortview ul li {
@@ -184,6 +193,7 @@
     color: #757380;
     text-align: center;
     font-size: 14px;
+    z-index: 100000;
   }
 
   .mobview #shortview ul li:hover {
@@ -213,6 +223,9 @@
 
 
 @media (max-width: 525px){
+  .topContainer{
+    z-index: 100;
+  }
   .navbar{
     flex-direction: row;
     flex-wrap: wrap;
